--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,8 +4,8 @@
     <title>Metabolomics</title>
     <link rel="stylesheet" href="../../style/main.css" type="text/css" />
     <script src="/_utils/script/json2.js"></script>  
-	</span><script src="/_utils/script/jquery.js?1.3.1"></script>  
-	</span><script src="/_utils/script/jquery.couch.js?0.9.0"></script>
+	<script src="/_utils/script/jquery.js?1.3.1"></script>  
+	<script src="/_utils/script/jquery.couch.js?0.9.0"></script>
 	<script type="text/javascript">
 	    var $ = jQuery.noConflict();
 	</script>
@@ -15,8 +15,7 @@
 	    var $ui = jQuery.noConflict();
 	</script>
 	<script src="../../js/jquery-ui-1.8.16.custom.min.js"></script>
-	
-	<span style="white-space: pre;"> </span>  
+	<script src="js/metabolomics_functions.js"></script>
   </head>
   <body>
     <div id="account"></div>
@@ -24,14 +23,17 @@
     <h1>Edit document</h1>
 
     <div id="profile">
-    	<p>Edit the compound file below</p>
+    	<p>Edit the compound file below (Coming soon)</p>
     </div>
     
     <div id="items">
-    	{{#data}}
-    		{{Name}}<br />
-    	{{/data}}
-
+    	{{>doc_body}}
+    	<form class="editform">
+    	<p>Your inputs will serve as the foundation for a richer database for future analysis.</p>
+    	
+    	Author: <input type="text" name="username" /><br />
+    	Insight: <textarea rows="4" cols="40"></textarea><br />
+    	<input type="submit" />
     </div>
 
     <div id="sidebar">
