added analytics code

--- a/templates/partials/pathway_explorer/scripts.html
+++ b/templates/partials/pathway_explorer/scripts.html
@@ -5,3 +5,16 @@
 <script src="../js/jquery.wordstats.js"></script>
 <script src="../js/jquery.wordstats.en.js"></script>
 <script src="../js/metabolomics_functions.js"></script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-19114222-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
