--- a/_attachments/css/KeepItSimple.css
+++ b/_attachments/css/KeepItSimple.css
@@ -36,6 +36,30 @@ a.more-link {
 a:hover.more-link {
 	text-decoration: none;
 }
+
+div.avatar {
+  padding:2px;
+  padding-bottom:0;
+  margin-right:4px;
+  float:left;
+  font-size:0.78em;
+  width : 60px;
+  height : 60px;
+  text-align: center;
+}
+
+div.avatar .name {
+  padding-top:2px;
+}
+
+div.avatar img {
+  margin:0 auto;
+  padding:0;
+  width : 40px;
+  height : 40px;
+}
+
+
 /* Headers */
 h1, h2, h3, h4 {
 	font: bold 1em/1.5em Georgia, 'Times New Roman', Times, serif;
